# jmct.cc

./: about.markdown  site.cabal  site.hs  sync.sh
burge/: 1.md  intro.md
dev/: 1.md  2.md
memos/: BlindSearch.md  DemandSpecialisation.md  FreeTutorial.lhs
posts/: hudak.md  introduction.md  plmw.md  qada.md
templates/: about.html  default.html  index.html  post.html  posts.html
