name:                site
version:             0.1.0.0
synopsis:            Static site for jmct.cc
homepage:            http://jmct.cc
license:             AllRightsReserved
author:              José Manuel Calderón Trilla
maintainer:          jmct@jmct.cc
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable site
  main-is:             site.hs
  Ghc-options:         -Wall
  build-depends:       base >=4.5.0,
                       MissingH,
                       hakyll >= 4.9.8.0,
                       pandoc,
                       containers
